# mormon-queer-analysis

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
database/: streamlit.duckdb
mormon_queer_analysis/: __init__.py  partitions.py
mormon_queer_analysis/assets/: dbt.py  open_ai.py  reddit.py  streamlit.py
mormon_queer_analysis/resources/: __init__.py  duckdb_io_manager.py  filter_keywords.txt  open_client.py
mormon_queer_analysis/utils/: embeddings_utils.py  playground.ipynb
mormon_queer_analysis_dbt/: README.md  dbt_project.yml  profiles.yml
mormon_queer_analysis_dbt/models/: schema.yml  sources.yml
mormon_queer_analysis_dbt/models/reddit/: topical_reddit_posts_and_comments.sql
mormon_queer_analysis_tests/: test_assets.py  test_duckdb_io_manager.py
